# students-big-brother

./: .gitignore  .travis.yml  bootstrapping.sh  build-stuff-to-deploy.sh  dev-setup.sh  docker-compose.yaml  docker-postgres-cheatsheet.md  readme.md  requests.md  stack.yaml  start-server.sh  students-big-brother-server.cabal  students-big-brother.cabal
app/: Main.hs
cfg/: client-daemon-cfg-1.json  client-daemon-cfg-2.json  client-daemon-cfg-3.json  db_init.sql  server-cfg.json
client-config-generator/: client-config-generator.cabal  compress.sh  run.bat
client-config-generator/app/: Main.hs
deployment/: db_init.sql
frontend/: admin.html  index.html  package.json  start-frontend-server.sh  style.css  webpack.config.js
frontend/js/: admin.js  index.js  main.js
frontend/sandbox/: sandbox.html  sandbox.js
frontend/src/: admin.html  admin.js  index.html  index.js  main.js  style.css
src/: API.hs  Client.hs  DB.hs  Lib.hs  Server.hs  Types.hs  db_init.sql
students-big-brother-client/: example-client-daemon-cfg.json  students-big-brother-client.cabal
students-big-brother-client/app/: Main.hs
students-big-brother-client/src/: Client.hs
students-big-brother-db/: Dockerfile  init-db.sh
students-big-brother-frontend/: package.json  webpack.config.js
students-big-brother-frontend-ember/: .dockerignore  Dockerfile  README.md  bower.json  ember-cli-build.js  nginx.conf  package.json
students-big-brother-frontend-ember/app/: index.html  router.js
students-big-brother-frontend-ember/app/components/: login-form.js
students-big-brother-frontend-ember/app/helpers/: highlight-code.js
students-big-brother-frontend-ember/app/models/: student-source-file.js
students-big-brother-frontend-ember/app/routes/: index.js  students.js
students-big-brother-frontend-ember/app/styles/: app.css
students-big-brother-frontend-ember/app/templates/: application.hbs  index.hbs  students.hbs
students-big-brother-frontend-ember/app/templates/components/: login-form.hbs  student-tabs-list.hbs  students-tab.hbs
students-big-brother-frontend-ember/config/: environment.js
students-big-brother-frontend-ember/mirage/: config.js
students-big-brother-frontend-ember/tests/: index.html
students-big-brother-frontend-ember/tests/acceptance/: login-test.js
students-big-brother-frontend-ember/tests/integration/components/: students-tab-test.js  students-tabs-list-test.js
students-big-brother-frontend-ember/tests/unit/helpers/: highlight-code-test.js
students-big-brother-frontend-ember/tests/unit/models/: student-source-file-test.js
students-big-brother-frontend/src/: admin.html  admin.js  index.html  index.js  style.css
students-big-brother-server/: Dockerfile  example-server-cfg.json  requests.md  start-server.sh  students-big-brother-server.cabal
students-big-brother-server/app/: Main.hs
students-big-brother-server/deployment/: db_init.sql
students-big-brother-server/src/: DB.hs  Server.hs
students-big-brother-types/: students-big-brother-types.cabal
students-big-brother-types/src/: API.hs  Types.hs
