name:                students-big-brother
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/students-big-brother#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable students-big-brother-exe
  hs-source-dirs:      src, app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , either
                     , transformers
                     , text
                     , bytestring
                     , aeson
                     , servant-server
                     , servant-client
                     , wai
                     , warp
                     , extensible-effects
                     , process
                     , directory
                     , filepath
                     , time
                     , postgresql-simple
  default-language:    Haskell2010

test-suite students-big-brother-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , students-big-brother
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/students-big-brother
