name:                client-config-generator
version:             0.1.0
description:         Please see README.md
homepage:            http://github.com/geo2a/students-big-brother
license:             BSD3
license-file:        LICENSE
author:              Georgy Lukyanov
maintainer:          mail@geo2a.info
copyright:           2016 Georgy Lukyanov
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable client-config-generator
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , text
                     , aeson
                     , aeson-pretty
                     , bytestring
                     , directory
                     , students-big-brother-types
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/geo2a/students-big-brother
