name:                students-big-brother-server
version:             0.1.0
description:         Please see README.md
homepage:            http://github.com/geo2a/students-big-brother
license:             BSD3
license-file:        LICENSE
author:              Georgy Lukyanov
maintainer:          mail@geo2a.info
copyright:           2016 Georgy Lukyanov
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable students-big-brother-server
  hs-source-dirs:      src, app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , transformers
                     , text
                     , bytestring
                     , data-default
                     , aeson
                     , servant
                     , servant-server
                     , wai
                     , wai-cors
                     , wai-extra
                     , warp
                     , time
                     , postgresql-simple
                     , students-big-brother-types
  default-language:    Haskell2010
  other-modules:       Server
                     , DB


source-repository head
  type:     git
  location: https://github.com/geo2a/students-big-brother
