name:                students-big-brother-types
version:             0.1.0
description:         Please see README.md
homepage:            http://github.com/geo2a/students-big-brother
license:             BSD3
license-file:        LICENSE
author:              Georgiy Lukjanov
maintainer:          georgiylukjanov@gmail.com
copyright:           2016 Georgiy Lukjanov
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Types, API
  hs-source-dirs:      src
  build-depends:       base >=4.8 && <4.9
                       , aeson
                       , text
                       , servant
                       , servant-server

  default-language:    Haskell2010
