name:                students-big-brother-types
version:             0.1.0
description:         Please see README.md
homepage:            http://github.com/geo2a/students-big-brother
license:             BSD3
license-file:        LICENSE
author:              Georgy Lukyanov
maintainer:          mail@geo2a.info
copyright:           2016 Georgy Lukyanov
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Types, API
  hs-source-dirs:      src
  build-depends:       base
                       , aeson
                       , text
                       , servant
                       , servant-server
                       , time

  default-language:    Haskell2010
